Resolves fdo#59889 fault in dragging edge of RTL table

i)  Resolves fdo#59889 formatting in dragging edge of RTL table resizes column width of the next column instead of current column.
ii) prevents resizing the whole table on dragging edge

  In NxN LTR table vertical edge responsible for resizing the column x(x=0 to N-1) is, Edge x+1.  But, in RTL table
vertical edge responisble for resizing the column x(x=0 to N-1, but from right to left)is, Edge x.
  Use (nEdge-1)instead nEdge-- to avoid conflicts.

Change-Id: If412b443ec8f82942ff80ba3aec24a9bfc053ac9